Reading time is not aligned correctly with the latest Safari
Fixes #1873

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -734,13 +734,9 @@ template {
     font-size: 0.85em;
 }
 
-.item-meta-info li:after {
+.item-meta-info li:not(:last-child):after {
     content: "|";
     color: var(--item-meta-li-color);
-}
-
-.item-meta-info li:last-child:after {
-    content: "";
 }
 
 .item-meta-icons li {
